After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781040 - Website link in about dialog is broken
Website link in about dialog is broken
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-07 18:27 UTC by jimportal
Modified: 2017-12-04 18:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Replace 404 link in the about dialog (917 bytes, patch)
2017-10-28 18:28 UTC, Piotr Drąg
committed Details | Review

Description jimportal 2017-04-07 18:27:35 UTC
The broken (404 Not Found) website link in the about dialog points to: http://burtonini.com/blog/computers/sound-juicer

The new address seems to be: http://www.burtonini.com/blog/2009/11/25/sound-juicer-4/

It may be better to use the wiki page at: https://wiki.gnome.org/Apps/SoundJuicer
Comment 1 Piotr Drąg 2017-10-28 18:28:48 UTC
Created attachment 362452 [details] [review]
Replace 404 link in the about dialog

This patch replaces the dead link with a link to wiki.
Comment 2 Piotr Drąg 2017-12-04 18:48:52 UTC
Comment on attachment 362452 [details] [review]
Replace 404 link in the about dialog

It’s pretty much a no-brainer. Pushed: https://git.gnome.org/browse/sound-juicer/commit/?id=ea1152f74171bb08c6bfa2254cde3d883927905b