Replace 404 link in the about dialog

https://bugzilla.gnome.org/show_bug.cgi?id=781040